ci: package.json

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
+    "build:style": "tailwind build src/styles/index.css -o src/styles/tailwind.css",
     "start": "craco start",
     "build": "craco build",
     "test": "craco test",
@@ -41,6 +42,7 @@
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.3.3",
+    "@tailwindcss/postcss7-compat": "^2.2.9",
     "autoprefixer": "^9.8.6",
     "postcss": "^7.0.36",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.9"
