--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.4",
     "form-data": "^4.0.0",
+    "laravel-echo": "^1.11.3",
+    "pusher-js": "^7.0.3",
     "react": "^17.0.2",
     "react-alert": "^7.0.3",
     "react-dom": "^17.0.2",
